# fastapi-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: production.yml
nginx/: nginx.conf
